--- a/app/src/main/res/layout/benchmark_result_header.xml
+++ b/app/src/main/res/layout/benchmark_result_header.xml
@@ -3,54 +3,59 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/auroraItemBackground"
+    android:background="@color/auroraBlueBackground"
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/modelName"
+        android:id="@+id/headerModelName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:text="@string/model_name"
+        android:text="Model Name"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/auroraTextColor" />
 
     <TextView
-        android:id="@+id/processingTime"
+        android:id="@+id/headerProcessingTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:text="0.0000s"
+        android:text="Processing Time"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/auroraTextColor"
         android:gravity="center" />
 
     <TextView
-        android:id="@+id/fps"
+        android:id="@+id/headerFps"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="0.00"
+        android:text="FPS"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/auroraTextColor"
         android:gravity="center" />
 
     <TextView
-        android:id="@+id/totalTime"
+        android:id="@+id/headerTotalTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:text="0.0000s"
+        android:text="Total Time"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/auroraTextColor"
         android:gravity="center" />
 
     <TextView
-        android:id="@+id/quantized"
+        android:id="@+id/headerQuantized"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:text="Yes"
+        android:text="Quantized"
+        android:textStyle="bold"
         android:textSize="14sp"
         android:textColor="@color/auroraTextColor"
         android:gravity="center" />
